results with new columns

--- a/results.qmd
+++ b/results.qmd
@@ -54,32 +54,36 @@ payroll_data_fire_police <- readRDS("data_source/payroll_data_fire_police.rds")
 
 
 
+```{r}
+payroll_data_fire_police <-
+  payroll_data_fire_police |> 
+  mutate(agency_start_date_year = year(agency_start_date)) |> 
+  mutate(total_paid = rowSums(across(c(regular_gross_paid, total_ot_paid, total_other_pay)),na.rm = TRUE))
+```
+
+
+
+
+
+
 
 ```{r}
 head(payroll_data_fire_police,5)
 ```
 
 ```{r}
-
-
 colnames(payroll_data_fire_police)
 ```
 
 
-```{r}
-print(names(payroll_data))
-
-str(names(payroll_data))
-```
-
 
 ```{r}
-payroll_data_fire_police <- payroll_data_fire_police |>
-  mutate(start_year = lubridate::year(agency_start_date)) |> 
-  filter(start_year > 2014)
+payroll_data_fire_police |>
+  mutate(agency_start_date_year = lubridate::year(agency_start_date)) |> 
+  filter(agency_start_date_year > 2014) |> 
 
 # Create the bar chart
-ggplot(payroll_data_fire_police, aes(x = start_year, fill = agency_name)) +
+ggplot(aes(x = agency_start_date_year, fill = agency_name)) +
   geom_bar() +
   labs(
     title = "Count of Records by Agency Start Year",
@@ -107,7 +111,7 @@ payroll_data_fire_police |>
 
 
 ```{r}
-payroll_data |>
+payroll_data_fire_police |>
 
   group_by(work_location_borough, agency_name) |> 
   summarise(count = n(), .groups = 'drop') |> 
@@ -122,7 +126,7 @@ payroll_data |>
 
 
 ```{r}
-payroll_data |> 
+payroll_data_fire_police |> 
   group_by(agency_name) |> 
   summarise(
     Total_records = n_distinct(work_location_borough)
@@ -131,7 +135,7 @@ payroll_data |>
 
 
 ```{r}
-payroll_data |> 
+payroll_data_fire_police |> 
   group_by(agency_name) |> 
   summarise(
     Total_records = n()
@@ -140,43 +144,14 @@ payroll_data |>
 ```
 
 
-```{r}
-payroll_data |> 
-  mutate(agency_name_clean = trimws(gsub("#\\d+$", "", agency_name))) |> 
-  group_by(agency_name_clean) |> 
-  summarise(
-    Total_records = n()
-  ) 
-  
-```
+
 
 
 
 ```{r}
-payroll_data <- 
-  payroll_data |> 
-  mutate(agency_name_clean = trimws(gsub("#\\d+$", "", agency_name)))
-  
-```
-
-
-```{r}
-payroll_data |> 
-  # mutate(agency_name_clean = trimws(gsub("#\\d+$", "", agency_name))) |> 
-  group_by(agency_name_clean) |> 
-  summarise(
-    Total_records = n()
-  ) |> 
-  arrange(desc(Total_records))
-  
-```
-
-
-
-```{r}
-payroll_data |> 
+payroll_data_fire_police |> 
   filter(fiscal_year == "2024") |>
-  filter(agency_name_clean %in%  c(
+  filter(agency_name %in%  c(
     "DEPT OF ED PEDAGOGICAL",
     "DEPT OF ED PER SESSION TEACHER",
     "DEPT OF ED HRLY SUPPORT STAFF","DEPT OF ED PARA PROFESSIONALS",
@@ -186,7 +161,7 @@ payroll_data |>
     "POLICE DEPARTMENT",
     "FIRE DEPARTMENT"
     )) |> 
-group_by(agency_name_clean) |> 
+group_by(agency_name) |> 
   summarise(
     Total_records = n(),
     n_work_location_borough = n_distinct(work_location_borough)
@@ -196,9 +171,9 @@ group_by(agency_name_clean) |>
 
 
 ```{r}
-payroll_data |> 
+payroll_data_fire_police |> 
   filter(fiscal_year == "2024") |>
-  filter(agency_name_clean %in%  c(
+  filter(agency_name %in%  c(
     "DEPT OF ED PEDAGOGICAL",
     "DEPT OF ED PER SESSION TEACHER",
     "DEPT OF ED HRLY SUPPORT STAFF","DEPT OF ED PARA PROFESSIONALS",
@@ -208,50 +183,26 @@ payroll_data |>
     "POLICE DEPARTMENT",
     "FIRE DEPARTMENT"
     )) |> 
-group_by(agency_name_clean,work_location_borough) |> 
+group_by(agency_name,work_location_borough) |> 
   summarise(
     Total_records = n()
   ) |> 
-  arrange(agency_name_clean,work_location_borough)
+  arrange(agency_name,work_location_borough)
 ```
 
+
 ```{r}
-payroll_data |> 
+payroll_data_fire_police |> 
   # filter(fiscal_year == "2024") |>
-  filter(agency_name_clean %in%  c(
+  filter(agency_name %in%  c(
     "POLICE DEPARTMENT",
     "FIRE DEPARTMENT"
     )) |> 
-group_by(agency_name_clean) |> 
+group_by(agency_name,fiscal_year) |> 
   summarise(
     Total_records = n()
   ) |> 
-  arrange(agency_name_clean)
-```
-
-```{r}
-payroll_data |> 
-  # filter(fiscal_year == "2024") |>
-  filter(agency_name_clean %in%  c(
-    "POLICE DEPARTMENT",
-    "FIRE DEPARTMENT"
-    )) |> 
-group_by(agency_name_clean,fiscal_year) |> 
-  summarise(
-    Total_records = n()
-  ) |> 
-  arrange(agency_name_clean,fiscal_year)
-```
-
-
-```{r}
-payroll_data_fire_police <-
-  payroll_data |> 
-  # filter(fiscal_year == "2024") |>
-  filter(agency_name_clean %in%  c(
-    "POLICE DEPARTMENT",
-    "FIRE DEPARTMENT"
-    )) 
+  arrange(agency_name,fiscal_year)
 ```
 
 
@@ -264,47 +215,17 @@ payroll_data_fire_police <-
 ```{r}
 payroll_data_fire_police |> 
   filter(fiscal_year == "2024") |>
-  summary()
-```
-
-
-
-```{r}
-payroll_data_fire_police |> 
-  filter(fiscal_year == "2024") |>
-  group_by(agency_name_clean,title_description) |> 
+  group_by(agency_name,title_description) |> 
   summarise(
     Total_records = n()
     ,.groups = "drop"
   ) |> 
-  arrange(agency_name_clean,desc(Total_records))
+  arrange(agency_name,desc(Total_records))
 ```
 
 
 
 
-```{r}
-payroll_data_fire_police <-
-  payroll_data_fire_police |> 
-  mutate(total_pay = rowSums(across(c(regular_gross_paid, total_ot_paid, total_other_pay)),na.rm = TRUE))
-```
-
-```{r}
-library(lubridate)
-
-payroll_data_fire_police <- 
-  payroll_data_fire_police |> 
-  # mutate(agency_start_date_clean = mdy(agency_start_date))
-  mutate(agency_start_date_clean = agency_start_date)
-
-```
-
-
-```{r}
-payroll_data_fire_police |> 
-  select(agency_start_date, agency_start_date_clean) |> 
-  head()
-```
 
 
 
@@ -334,25 +255,25 @@ payroll_data_fire_police |>
 ```{r}
 payroll_data_fire_police |> 
   # filter(fiscal_year == "2024") |>
-  group_by(agency_name_clean) |> 
+  group_by(agency_name) |> 
   summarise(
     Total_records = n(),
-    min(agency_start_date_clean),
-    max(agency_start_date_clean)
+    min(agency_start_date),
+    max(agency_start_date)
   ) |> 
-  arrange(agency_name_clean,desc(Total_records))
+  arrange(agency_name,desc(Total_records))
 ```
 
 ```{r}
 
 # good for alluvium, year start, year paid
 payroll_data_fire_police |> 
-  mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
-  group_by(year_agency_start_date_clean) |> 
+  mutate(agency_start_date_year = year(agency_start_date)) |> 
+  group_by(agency_start_date_year) |> 
   summarise(
     Total_records = n(),
   ) |> 
-  arrange(year_agency_start_date_clean)
+  arrange(agency_start_date_year)
 
 ```
 
@@ -361,33 +282,46 @@ payroll_data_fire_police |>
 
 # good for alluvium, year start, year paid
 payroll_data_fire_police |> 
-  mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
-  filter(year_agency_start_date_clean == 1960)
+  filter(agency_start_date_year == 1960)
 
 ```
 
+```{r}
+
+# good for alluvium, year start, year paid
+payroll_data_fire_police |> 
+  filter(agency_start_date_year == 2049)
+
+```
+```{r}
+
+# good for alluvium, year start, year paid
+payroll_data_fire_police |> 
+  filter(last_name == 'KIRBY' & first_name =='KATHLYN')
+
+```
 
 
 
 ```{r}
 payroll_data_fire_police |> 
   filter(fiscal_year == "2024") |>
-  group_by(agency_name_clean,pay_basis) |> 
+  group_by(agency_name,pay_basis) |> 
   summarise(
     Total_records = n(),
-    TOTAL_total_pay = sum(total_pay),
+    TOTAL_total_paid = sum(total_paid),
     TOTAL_regular_gross_paid = sum(regular_gross_paid),
     TOTAL_total_ot_paid = sum(total_ot_paid),
     TOTAL_total_other_pay = sum(total_other_pay),
-    PCT_total_pay = sum(total_pay) / sum(total_pay),
-    PCT_regular_gross_paid = sum(regular_gross_paid)/ sum(total_pay),
-    PCT_total_ot_paid = sum(total_ot_paid)/ sum(total_pay),
-    PCT_total_other_pay = sum(total_other_pay)/ sum(total_pay),
+    PCT_total_paid = sum(total_paid) / sum(total_paid),
+    PCT_regular_gross_paid = sum(regular_gross_paid)/ sum(total_paid),
+    PCT_total_ot_paid = sum(total_ot_paid)/ sum(total_paid),
+    PCT_total_other_pay = sum(total_other_pay)/ sum(total_paid),
     records_with_1 = sum(is.na(regular_gross_paid)),
     records_with_2 = sum(is.na(total_ot_paid)),
     records_with_3 = sum(is.na(total_other_pay)),
   ) |> 
-  arrange(agency_name_clean,pay_basis,desc(Total_records))
+  arrange(agency_name,pay_basis,desc(Total_records))
   # format(n=1)
   # format(scientific=TRUE)
 ```
@@ -409,22 +343,22 @@ remove pro_rated data
 ```{r}
 payroll_data_fire_police |> 
   filter(fiscal_year > "2014") |>
-  group_by(agency_name_clean,fiscal_year) |> 
+  group_by(agency_name,fiscal_year) |> 
   summarise(
     Total_records = n(),
-    TOTAL_total_pay = sum(total_pay),
+    TOTAL_total_paid = sum(total_paid),
     TOTAL_regular_gross_paid = sum(regular_gross_paid),
     TOTAL_total_ot_paid = sum(total_ot_paid),
     TOTAL_total_other_pay = sum(total_other_pay),
-    PCT_total_pay = sum(total_pay) / sum(total_pay),
-    PCT_regular_gross_paid = sum(regular_gross_paid)/ sum(total_pay),
-    PCT_total_ot_paid = sum(total_ot_paid)/ sum(total_pay),
-    PCT_total_other_pay = sum(total_other_pay)/ sum(total_pay),
+    PCT_total_paid = sum(total_paid) / sum(total_paid),
+    PCT_regular_gross_paid = sum(regular_gross_paid)/ sum(total_paid),
+    PCT_total_ot_paid = sum(total_ot_paid)/ sum(total_paid),
+    PCT_total_other_pay = sum(total_other_pay)/ sum(total_paid),
     records_with_1 = sum(is.na(regular_gross_paid)),
     records_with_2 = sum(is.na(total_ot_paid)),
     records_with_3 = sum(is.na(total_other_pay)),
   ) |> 
-  arrange(agency_name_clean,fiscal_year,desc(Total_records))
+  arrange(agency_name,fiscal_year,desc(Total_records))
 
 ```
 
@@ -445,12 +379,12 @@ payroll_data_fire_police |>
 ```{r}
 payroll_data_fire_police |> 
   filter(fiscal_year > "2014") |>
-  group_by(agency_name_clean,fiscal_year) |> 
+  group_by(agency_name,fiscal_year) |> 
   summarise(
     Total_records = n(),
-    TOTAL_total_pay = n_distinct(title_description)
+    TOTAL_total_paid = n_distinct(title_description)
   ) |> 
-  arrange(agency_name_clean,fiscal_year,desc(Total_records))
+  arrange(agency_name,fiscal_year,desc(Total_records))
 
 ```
 
@@ -460,15 +394,15 @@ payroll_data_fire_police |>
 
 ```{r}
 payroll_data_fire_police |> 
-  mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
-  filter(year_agency_start_date_clean == "2024") |>
+  # mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
+  filter(agency_start_date_year == "2024") |>
   filter(fiscal_year > "2014") |>
-  group_by(agency_name_clean,title_description) |> 
+  group_by(agency_name,title_description) |> 
   summarise(
     Total_records = n()
     ,mean(base_salary)
   ) |> 
-  arrange(agency_name_clean,desc(Total_records))
+  arrange(agency_name,desc(Total_records))
 
 ```
 
@@ -483,13 +417,13 @@ payroll_data_fire_police |>
   # mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
   # filter(fiscal_year == "2018") |>
   filter(title_description %in%  c("FIREFIGHTER","POLICE OFFICER")) |>
-  group_by(agency_name_clean,pay_basis,fiscal_year,title_description) |> 
+  group_by(agency_name,pay_basis,fiscal_year,title_description) |> 
   summarise(
     Total_records = n()
     ,mean(base_salary)
-    ,mean(total_pay)
+    ,mean(total_paid)
   ) |> 
-  arrange(agency_name_clean,desc(Total_records))
+  arrange(agency_name,desc(Total_records))
 
 ```
 
@@ -568,7 +502,7 @@ payroll_data_fire_police |>
 
 
 ```{r}
-payroll_data |>
+payroll_data_fire_police |>
   # filter(title_description== "TEACHER- PER SESSION") |>
   filter(fiscal_year == "2024") |>
   filter(leave_status_as_of_june_30=="ACTIVE") |>
@@ -591,7 +525,7 @@ payroll_data |>
 
 
 ```{r}
-payroll_data |>
+payroll_data_fire_police |>
   # filter(title_description== "TEACHER- PER SESSION") |>
   # filter(fiscal_year == "2024") |>
   filter(leave_status_as_of_june_30=="ACTIVE") |>
@@ -612,21 +546,9 @@ payroll_data |>
   arrange(desc(Total_records))
 ```
 
-
 ```{r}
-payroll_data |>
-  mutate(agency_name_clean = trimws(gsub("#\\d+$", "", Agency.Name))) |>
-  filter(grepl("DA\\s*$", agency_name_clean, ignore.case = TRUE)) |>
-  group_by(agency_name_clean,Work.Location.Borough) |>
-  summarise(
-    Total_records = n()
-  )
-
-```
-
-```{r}
-payroll_data |>
-  group_by(Work.Location.Borough) |>
+payroll_data_fire_police |>
+  group_by(work_location_borough) |>
   summarise(
     Total_records = n()
   )
@@ -637,12 +559,7 @@ payroll_data |>
 
 
 ```{r}
-payroll_data <- payroll_data |>
-  mutate(work_location_borough = toupper(work_location_borough))
-```
-
-```{r}
-payroll_data |>
+payroll_data_fire_police |>
   group_by(work_location_borough,fiscal_year) |>
   summarise(
     Total_records = n()
@@ -653,7 +570,7 @@ payroll_data |>
 
 
 ```{r}
-payroll_data |>
+payroll_data_fire_police |>
   group_by(title_description) |>
   summarise(
     Total_records = n()
@@ -667,62 +584,7 @@ payroll_data |>
 
 
 ```{r}
-payroll_data |>
-  filter(title_description== "TEACHER") |>
-  group_by(title_description) |>
-  summarise(
-    Total_records = n(),
-    base_salary_sum = sum(base_salary),
-    base_salary_avg = mean(base_salary)
-  ) |>
-  arrange(desc(Total_records))
-```
-
-```{r}
-payroll_data |>
-  filter(title_description== "TEACHER- PER SESSION") |>
-  # filter(fiscal_year == "2024") |>
-  group_by(agency_name,title_description,work_location_borough) |>
-  summarise(
-    Total_records = n(),
-    base_salary_sum = sum(base_salary),
-    base_salary_avg = mean(base_salary)
-  ) |>
-  arrange(desc(Total_records))
-```
-
-
-
-```{r}
-payroll_data |>
-  filter(title_description== "TEACHER")
-```
-
-
-```{r}
-payroll_data |>
-  filter(title_description== "TEACHER- PER SESSION")
-```
-
-
-```{r}
-payroll_data |>
-  # filter(title_description== "TEACHER- PER SESSION") |>
-  # filter(fiscal_year == "2024") |>
-  filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
-  group_by(agency_name,work_location_borough) |>
-  summarise(
-    Total_records = n(),
-    base_salary_sum = sum(base_salary),
-    base_salary_avg = mean(base_salary)
-  ) |>
-  arrange(desc(Total_records))
-```
-
-
-
-```{r}
-payroll_data |>
+payroll_data_fire_police |>
   # filter(title_description== "TEACHER- PER SESSION") |>
   # filter(fiscal_year == "2024") |>
   # filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
@@ -735,49 +597,9 @@ payroll_data |>
   arrange(desc(agency_name))
 ```
 
-```{r}
-payroll_data |>
-  # filter(title_description== "TEACHER- PER SESSION") |>
-  filter(fiscal_year == "2024") |>
-  filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
-  group_by(agency_name,work_location_borough,pay_basis) |>
-  summarise(
-    Total_records = n(),
-    base_salary_sum = sum(base_salary),
-    base_salary_avg = mean(base_salary)
-  ) |>
-  arrange(desc(agency_name))
-```
 
 ```{r}
-payroll_data |>
-  # filter(title_description== "TEACHER- PER SESSION") |>
-  # filter(fiscal_year == "2024") |>
-  filter(pay_basis == "per Annum") |>
-  # filter(leave_status_as_of_june_30=="ACTIVE") |>
-  filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
-  group_by(agency_name,fiscal_year,pay_basis,leave_status_as_of_june_30) |>
-  summarise(
-    Total_records = n(),
-    base_salary_sum = sum(base_salary),
-    base_salary_avg = mean(base_salary)
-  ) |>
-  arrange(desc(agency_name))
-```
-
-
-```{r}
-payroll_data |>
-  filter(title_description== "TEACHER- PER SESSION") |>
-  filter(fiscal_year == "2024") |>
-  filter(leave_status_as_of_june_30=="CEASED") |>
-  filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER"))
-```
-
-
-
-```{r}
-payroll_data <- payroll_data |>
+payroll_data_fire_police <- payroll_data_fire_police |>
   # mutate(base_salary_std = if_else(pay_basis == "per Day", base_salary * 260, base_salary) |>
   mutate(
     regular_gross_paid = as.numeric(regular_gross_paid),
@@ -789,14 +611,14 @@ payroll_data <- payroll_data |>
 
 
 ```{r}
-head(payroll_data)
+head(payroll_data_fire_police)
 ```
 
 
 ```{r}
-payroll_data |>
+payroll_data_fire_police |>
     filter(fiscal_year == "2024") |>
-  filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
+  # filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
 
 ggplot() +
     geom_point(mapping = aes(x=base_salary,
@@ -810,9 +632,9 @@ ggplot() +
 
 
 ```{r}
-payroll_data |>
+payroll_data_fire_police |>
     filter(fiscal_year == "2024") |>
-  filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
+  # filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
 
 ggplot() +
     geom_point(mapping = aes(x=total_paid,
@@ -828,9 +650,9 @@ ggplot() +
 ```
 
 ```{r}
-payroll_data |>
+payroll_data_fire_police |>
   filter(fiscal_year == "2024") |>
-  filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
+  # filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |>
 
 ggplot() +
     geom_point(mapping = aes(x=regular_gross_paid,
